--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,34 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<tag>HEAD</tag>
 	</scm>
 
+	<profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-javadoc-plugin</artifactId>
+							<configuration>
+								<links>
+									<link>http://docs.oracle.com/javaee/6/api/</link>
+									<link>https://www.aoindustries.com/docs/ao-encoding/</link>
+									<link>https://www.aoindustries.com/docs/ao-io-buffer/</link>
+									<link>https://www.aoindustries.com/docs/ao-servlet-filter/</link>
+									<link>https://www.aoindustries.com/docs/aocode-public/</link>
+									<link>https://semanticcms.com/core/model/apidocs/</link>
+									<link>https://semanticcms.com/core/servlet/apidocs/</link>
+									<link>https://semanticcms.com/news/model/apidocs/</link>
+								</links>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+	</profiles>
+
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -59,13 +87,11 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			<version>2.2.1</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- TODO
 		<dependency>
 			<groupId>com.aoindustries</groupId>
 			<artifactId>ao-encoding</artifactId>
 			<version>1.3.1</version>
 		</dependency>
-		-->
 		<dependency>
 			<groupId>com.aoindustries</groupId>
 			<artifactId>ao-io-buffer</artifactId>
