--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 	<name>SemanticCMS News Servlet</name>
 	<url>https://semanticcms.com/news/servlet/</url>
 	<description>SemanticCMS newsfeeds in a Servlet environment.</description>
+	<inceptionYear>2016</inceptionYear>
 
 	<scm>
 		<connection>scm:git:git://github.com/aoindustries/semanticcms-news-servlet.git</connection>
