--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 
 	<groupId>com.semanticcms</groupId>
 	<artifactId>semanticcms-news-servlet</artifactId>
-	<version>1.1.1</version>
+	<version>1.1.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>SemanticCMS News Servlet</name>
@@ -44,7 +44,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<connection>scm:git:git://github.com/aoindustries/semanticcms-news-servlet.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-news-servlet.git</developerConnection>
 		<url>http://github.com/aoindustries/semanticcms-news-servlet</url>
-		<tag>semanticcms-news-servlet-1.1.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<profiles>
