--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 	<properties>
 		<bookPath>/news/servlet</bookPath>
 		<shortTitle>Servlet</shortTitle>
-		<description.html><![CDATA[<a target="_top" href="https://semanticcms.com/">SemanticCMS</a> newsfeeds in a Servlet environment.]]></description.html>
+		<description.html><![CDATA[<a target="_top" href="https://semanticcms.com/news/">SemanticCMS newsfeeds</a> in a Servlet environment.]]></description.html>
 	</properties>
 
 	<name>SemanticCMS News Servlet</name>
