--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 									<link>http://www.joda.org/joda-time/apidocs/</link>
 									<link>https://aoindustries.com/ao-encoding/apidocs/</link>
 									<link>https://aoindustries.com/ao-io-buffer/apidocs/</link>
+									<link>https://aoindustries.com/ao-lang/apidocs/</link>
 									<link>https://aoindustries.com/ao-servlet-filter/apidocs/</link>
 									<link>https://aoindustries.com/ao-taglib/apidocs/</link>
 									<link>https://aoindustries.com/aocode-public/apidocs/</link>
@@ -117,6 +118,11 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId>
+			<artifactId>ao-lang</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.aoindustries</groupId>
 			<artifactId>ao-servlet-filter</artifactId>
 			<version>1.4.2</version>
 		</dependency>
@@ -128,7 +134,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<dependency>
 			<groupId>com.aoindustries</groupId>
 			<artifactId>aocode-public</artifactId>
-			<version>1.8.3</version>
+			<version>1.9.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
