--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<dependency>
 			<groupId>com.aoindustries</groupId>
 			<artifactId>ao-io-buffer</artifactId>
-			<version>2.0.3-SNAPSHOT</version>
+			<version>2.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId>
