--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<dependency>
 			<groupId>com.aoindustries</groupId>
 			<artifactId>ao-taglib</artifactId>
-			<version>2.3.1-SNAPSHOT</version>
+			<version>2.3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId>
