--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-news-model</artifactId>
-			<version>1.1.3-SNAPSHOT</version>
+			<version>1.1.3</version>
 		</dependency>
 	</dependencies>
 </project>
