--- a/book/pom.xml
+++ b/book/pom.xml
@@ -132,7 +132,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-news-servlet</artifactId>
-			<version>1.1.3</version>
+			<version>1.1.4-SNAPSHOT</version>
 			<type>pom</type>
 			<scope>provided</scope>
 			<optional>true</optional>
