--- a/book/pom.xml
+++ b/book/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-news-servlet - SemanticCMS newsfeeds in a Servlet environment.
-Copyright (C) 2016, 2017, 2018  AO Industries, Inc.
+Copyright (C) 2016, 2017, 2018, 2019  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -37,7 +37,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<documented.groupId>com.semanticcms</documented.groupId><documented.artifactId>semanticcms-news-servlet</documented.artifactId>
 		<documented.javaVersion>1.6</documented.javaVersion>
 		<documented.javac.link.javaApi>${javac.link.javaApi.jdk16}</documented.javac.link.javaApi>
-		<documented.name>SemanticCMS News Servlet</documented.name>
+		<documented.name>SemanticCMS 2 News Servlet</documented.name>
 		<documented.shortTitle>Servlet</documented.shortTitle>
 		<documented.url>https://semanticcms.com/news/servlet/</documented.url>
 		<documented.description>SemanticCMS newsfeeds in a Servlet environment.</documented.description>
