--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-news-servlet - SemanticCMS newsfeeds in a Servlet environment.
-Copyright (C) 2016, 2017, 2018  AO Industries, Inc.
+Copyright (C) 2016, 2017, 2018, 2019  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -40,7 +40,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<description.html><![CDATA[<a target="_top" href="https://semanticcms.com/news/">SemanticCMS newsfeeds</a> in a Servlet environment.]]></description.html>
 	</properties>
 
-	<name>SemanticCMS News Servlet</name>
+	<name>SemanticCMS 2 News Servlet</name>
 	<url>https://semanticcms.com/news/servlet/</url>
 	<description>SemanticCMS newsfeeds in a Servlet environment.</description>
 	<inceptionYear>2016</inceptionYear>
