--- a/book/pom.xml
+++ b/book/pom.xml
@@ -35,8 +35,8 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 	<properties>
 		<!-- These values are copied from the project being documented -->
 		<documented.groupId>com.semanticcms</documented.groupId><documented.artifactId>semanticcms-news-servlet</documented.artifactId>
-		<documented.javaVersion>1.6</documented.javaVersion>
-		<documented.javac.link.javaApi>${javac.link.javaApi.jdk16}</documented.javac.link.javaApi>
+		<documented.javaVersion>1.7</documented.javaVersion>
+		<documented.javac.link.javaApi>${javac.link.javaApi.jdk7}</documented.javac.link.javaApi>
 		<documented.name>SemanticCMS 1 News Servlet</documented.name>
 		<documented.shortTitle>Servlet</documented.shortTitle>
 		<documented.url>https://semanticcms.com/news/servlet/</documented.url>
@@ -88,7 +88,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>com.aoindustries</groupId><artifactId>ao-badges</artifactId><version>1.0.1-validation-SNAPSHOT</version>
+			<groupId>com.aoindustries</groupId><artifactId>ao-badges</artifactId><version>1.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId><artifactId>ao-taglib</artifactId><version>3.0.0-SNAPSHOT</version>
