Fixed cross-project linking of javadocs (really this time).
The issue was our redirects from */apidocs/ to */apidocs/index.html
were interacting with a Maven plugin bug:

[MJAVADOC-539] Upgrading plugin from 3.0.0 to 3.0.1 and 3.1.0 breaks certain external javadoc links

https://issues.apache.org/jira/browse/MJAVADOC-539

--- a/pom.xml
+++ b/pom.xml
@@ -64,17 +64,17 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 							<links>
 								<link>${javac.link.javaApi}</link>
 								<link>${javac.link.javaeeApi.6}</link>
-								<link>http://www.joda.org/joda-time/apidocs</link>
-								<link>https://aoindustries.com/ao-io-buffer/apidocs</link>
-								<link>https://aoindustries.com/ao-net-types/apidocs</link>
-								<link>https://aoindustries.com/ao-taglib/apidocs</link>
-								<link>https://semanticcms.com/core/controller/apidocs</link>
-								<link>https://semanticcms.com/core/model/apidocs</link>
-								<link>https://semanticcms.com/core/pages/apidocs</link>
-								<link>https://semanticcms.com/core/pages/local/apidocs</link>
-								<link>https://semanticcms.com/core/servlet/apidocs</link>
-								<link>https://semanticcms.com/news/model/apidocs</link>
-								<link>https://semanticcms.com/news/renderer/html/apidocs</link>
+								<link>http://www.joda.org/joda-time/apidocs/</link>
+								<link>https://aoindustries.com/ao-io-buffer/apidocs/</link>
+								<link>https://aoindustries.com/ao-net-types/apidocs/</link>
+								<link>https://aoindustries.com/ao-taglib/apidocs/</link>
+								<link>https://semanticcms.com/core/controller/apidocs/</link>
+								<link>https://semanticcms.com/core/model/apidocs/</link>
+								<link>https://semanticcms.com/core/pages/apidocs/</link>
+								<link>https://semanticcms.com/core/pages/local/apidocs/</link>
+								<link>https://semanticcms.com/core/servlet/apidocs/</link>
+								<link>https://semanticcms.com/news/model/apidocs/</link>
+								<link>https://semanticcms.com/news/renderer/html/apidocs/</link>
 							</links>
 						</configuration>
 					</plugin>
