--- a/pom.xml
+++ b/pom.xml
@@ -64,16 +64,16 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 							<links>
 								<link>${javac.link.javaApi}</link>
 								<link>${javac.link.javaeeApi.6}</link>
-								<link>http://www.joda.org/joda-time/apidocs</link>
-								<link>https://aoindustries.com/ao-encoding/apidocs</link>
-								<link>https://aoindustries.com/ao-io-buffer/apidocs</link>
-								<link>https://aoindustries.com/ao-lang/apidocs</link>
-								<link>https://aoindustries.com/ao-servlet-filter/apidocs</link>
-								<link>https://aoindustries.com/ao-taglib/apidocs</link>
-								<link>https://aoindustries.com/aocode-public/apidocs</link>
-								<link>https://semanticcms.com/core/model/apidocs</link>
-								<link>https://semanticcms.com/core/servlet/apidocs</link>
-								<link>https://semanticcms.com/news/model/apidocs</link>
+								<link>http://www.joda.org/joda-time/apidocs/</link>
+								<link>https://aoindustries.com/ao-encoding/apidocs/</link>
+								<link>https://aoindustries.com/ao-io-buffer/apidocs/</link>
+								<link>https://aoindustries.com/ao-lang/apidocs/</link>
+								<link>https://aoindustries.com/ao-servlet-filter/apidocs/</link>
+								<link>https://aoindustries.com/ao-taglib/apidocs/</link>
+								<link>https://aoindustries.com/aocode-public/apidocs/</link>
+								<link>https://semanticcms.com/core/model/apidocs/</link>
+								<link>https://semanticcms.com/core/servlet/apidocs/</link>
+								<link>https://semanticcms.com/news/model/apidocs/</link>
 							</links>
 						</configuration>
 					</plugin>
