--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<description.html><![CDATA[<a target="_top" href="https://semanticcms.com/news/">SemanticCMS newsfeeds</a> in a Servlet environment.]]></description.html>
 	</properties>
 
-	<name>SemanticCMS 1 News Servlet</name>
+	<name>SemanticCMS News Servlet</name>
 	<url>https://semanticcms.com/news/servlet/</url>
 	<description>SemanticCMS newsfeeds in a Servlet environment.</description>
 	<inceptionYear>2016</inceptionYear>
