--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			<groupId>joda-time</groupId><artifactId>joda-time</artifactId><version>2.10.1</version>
 		</dependency>
 		<dependency>
-			<groupId>com.aoindustries</groupId><artifactId>ao-io-buffer</artifactId><version>3.0.0-SNAPSHOT</version>
+			<groupId>com.aoindustries</groupId><artifactId>ao-io-buffer</artifactId><version>3.0.1-validation-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId><artifactId>ao-net-types</artifactId><version>1.1.0-SNAPSHOT</version>
