--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 							<links>
 								<link>${javac.link.javaApi}</link>
 								<link>${javac.link.javaeeApi.6}</link>
-								<link>http://www.joda.org/joda-time/apidocs/</link>
+								<link>https://www.joda.org/joda-time/apidocs/</link>
 								<link>https://aoindustries.com/ao-encoding/apidocs/</link>
 								<link>https://aoindustries.com/ao-io-buffer/apidocs/</link>
 								<link>https://aoindustries.com/ao-lang/apidocs/</link>
