--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,6 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 								<link>https://aoindustries.com/ao-encoding/apidocs/</link>
 								<link>https://aoindustries.com/ao-io-buffer/apidocs/</link>
 								<link>https://aoindustries.com/ao-lang/apidocs/</link>
-								<link>https://aoindustries.com/ao-servlet-filter/apidocs/</link>
 								<link>https://aoindustries.com/ao-taglib/apidocs/</link>
 								<link>https://aoindustries.com/aocode-public/apidocs/</link>
 								<link>https://semanticcms.com/core/model/apidocs/</link>
@@ -104,11 +103,13 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			<groupId>com.aoindustries</groupId><artifactId>ao-lang</artifactId><version>2.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.aoindustries</groupId><artifactId>ao-servlet-filter</artifactId><version>1.6.0</version>
-		</dependency>
-		<dependency>
 			<groupId>com.aoindustries</groupId><artifactId>ao-taglib</artifactId><version>3.0.0</version>
 		</dependency>
+		<!--
+			Showing as "Unused declared dependencies found", but removing it then causes ao-lang to be show
+			as unused.  Something is confused here.  Maybe we have javadocs going to dependencies that are
+			otherwise not directly used?
+		-->
 		<dependency>
 			<groupId>com.aoindustries</groupId><artifactId>aocode-public</artifactId><version>2.0.0</version>
 		</dependency>
