--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			otherwise not directly used?
 		-->
 		<dependency>
-			<groupId>com.aoindustries</groupId><artifactId>aocode-public</artifactId><version>2.0.0-validation-SNAPSHOT</version>
+			<groupId>com.aoindustries</groupId><artifactId>aocode-public</artifactId><version>2.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId><artifactId>semanticcms-core-model</artifactId><version>1.9.0-validation-SNAPSHOT</version>
